--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6649327a90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f56ca59f390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6649007250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6649007490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f56ca915150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f56ca915350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f66495aab50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f66495aad90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f56caeb29d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f56caeb2bd0&gt;]</pre>
 </div>
 
 </div>
