--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc251208f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcf6142bad0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc250ef6110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc250ef6310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf6141d0d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcf6141d2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc25148aa90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc25148ac90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf619baa10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcf619bac10&gt;]</pre>
 </div>
 
 </div>
