--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f59489cb890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9855560910&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5948973290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5948973490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f985524e090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f985524e290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5948f23b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5948f23d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f98557e3990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f98557e3b90&gt;]</pre>
 </div>
 
 </div>
