--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5dd8ce2150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3c559ceed0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5dd2d283d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5dd2d285d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c5568fed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3c556bd090&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5dd32dbc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5dd32dbe10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c55c54890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3c55c54a10&gt;]</pre>
 </div>
 
 </div>
