--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f00251d1410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f30d288cd50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0025768f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f002579b150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f30d1a6c190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f30d1a6c390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0025d387d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0025d389d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f30d200aa90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f30d200ac90&gt;]</pre>
 </div>
 
 </div>
