--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb531532510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc6d9b42e90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb531814150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb531814350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc6d9832290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc6d9832490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb531db0b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb531db0d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc6d9dd5b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc6d9dd5d50&gt;]</pre>
 </div>
 
 </div>
