--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd8d74e4a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3493c51410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8d74ad390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd8d74ad590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3493f3f0d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3493f3f2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8d7a4fc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd8d7a4fe50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f34944dc9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f34944dcbd0&gt;]</pre>
 </div>
 
 </div>
