--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0f94ca5d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fabdebac8d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0f94985210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0f94985450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fabdee89190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fabdee893d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0f94f37b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0f94f37d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fabdf439a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fabdf439c90&gt;]</pre>
 </div>
 
 </div>
