--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd016ca56d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fae722345d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd016985350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd016985550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae721c9450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae721f3590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd016f28a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd016f28c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae7278ad10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae72794e50&gt;]</pre>
 </div>
 
 </div>
