--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb936febfd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f42cc7f71d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb936f9f110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb936f9f350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42cc7c41d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42cc7c43d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb937550a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb937550c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42ccd5ca50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42ccd5cc50&gt;]</pre>
 </div>
 
 </div>
