--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f004f79f910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1ee38dd490&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f004f76a290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f004f786dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ee38c63d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1ee38c65d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f004fd12750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f004fd1dd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ee3e64c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1ee3e64e10&gt;]</pre>
 </div>
 
 </div>
