--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7be6f1cf90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa1687e4990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7be6c25190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7be6c26450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa16879a310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa16879a510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7be71ba8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7be71c4dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa168d44b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa168d44d50&gt;]</pre>
 </div>
 
 </div>
