--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f18afeb6510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4676a9bf50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f18b019b090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f18b019b210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4676a74110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4676a74310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f18b0739850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f18b07399d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4677011a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4677011c10&gt;]</pre>
 </div>
 
 </div>
