--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd43f1f7f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f618af22910&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd43f1ba090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd43f1ba290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f618a87cf10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f618a8a9150&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd43f74ead0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd43f74ecd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f618ae47910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f618ae47b10&gt;]</pre>
 </div>
 
 </div>
