--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f57307a4ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0c5045d650&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5730d48290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5730d48490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0c5040e250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0c5040e450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f57312f8b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f57312f8d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0c509b1b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0c509b1d10&gt;]</pre>
 </div>
 
 </div>
