--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fae76e77b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fde942599d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fae76eb5ed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fae76eda110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fde94552190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fde94552390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fae76c036d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fae77486a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fde94af0a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fde94af0c90&gt;]</pre>
 </div>
 
 </div>
