--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faa14c21050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb7450240d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faa14be6390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faa14be6590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb7455da250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb7455da450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faa15184c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faa15184e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb745b8cbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb745b8cdd0&gt;]</pre>
 </div>
 
 </div>
